--- a/src/assets/scss/pages/home/include/homecategory.scss
+++ b/src/assets/scss/pages/home/include/homecategory.scss
@@ -51,7 +51,7 @@
                         transition: 0.3s;
                         border-radius: 50%;
                     }
-                    
+
                     img:hover {
                         outline: 2px solid #4ECDC4;
                         outline-offset: 4px;
@@ -103,9 +103,19 @@
         .home-category {
             min-height: 96px;
             width: 100%;
-            border-radius: 0px;
-            margin: 0px;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            margin-top: 30px;
             z-index: 2;
+            padding: 0px;
+            margin-bottom: 15px;
+
+            .header {
+                padding: 5;
+                margin-top: 20px;
+                font-size: 18px;
+                text-align: center;
+            }
 
             .body {
                 position: static;
