--- a/src/assets/scss/pages/account/include/ordermanagement.scss
+++ b/src/assets/scss/pages/account/include/ordermanagement.scss
@@ -45,7 +45,7 @@
         height: 36px;
         width: 100%;
         border-radius: 4px;
-        padding: 10px 12px;
+        padding: 10px 130px;
         line-height: 20px;
         outline: none;
         flex: 1 1 0%;
@@ -69,6 +69,7 @@
     -webkit-box-align: center;
     background-color: rgb(239,239,239);
     width: 100%;
+    margin-top: 20px;
 
     .empty-icon {
         padding-top: 20px;
