--- a/src/assets/scss/pages/home/include/homecategory.scss
+++ b/src/assets/scss/pages/home/include/homecategory.scss
@@ -15,6 +15,12 @@
     .body {
         margin: 10px 0px 0px;
 
+        @media (max-width: 1024px) {
+            .body-slide--list {
+                gap: 12px 5px;
+            }
+        }
+
         &-slide {
             position: relative;
             height: 100%;
