--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,7 @@
 @import "./pages/account/account.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap');
 @import "./components/common/shopcart.scss";
+@import "./components/common/searchmobile.scss";
 
 @import "./stylesTheme/light-dark-theme";
 
