update css mobile

--- a/src/assets/scss/pages/productdetail/include/mobile/m_detail_header.scss
+++ b/src/assets/scss/pages/productdetail/include/mobile/m_detail_header.scss
@@ -14,7 +14,7 @@
         height: 56px;
         -webkit-box-pack: justify;
         justify-content: space-between;
-        background-color: rgb(255, 255, 255);
+        background-color: #222232;
         
         .left-header {
             display: flex;
