--- a/src/assets/scss/pages/productdetail/product.scss
+++ b/src/assets/scss/pages/productdetail/product.scss
@@ -832,4 +832,12 @@
     }
 }
 
-    
+.notiAdd {
+    text-align: center;
+    color: green;
+    padding: 10px 20px;
+    width: 80%;
+    margin-bottom: 20px;
+    align-self: center;
+    border-radius: 10px;
+}
