--- a/src/assets/scss/components/layout/menuMobile.scss
+++ b/src/assets/scss/components/layout/menuMobile.scss
@@ -14,7 +14,7 @@
         position: fixed;
     }
 
-    div {
+    .tab {
         width: 50%;
         display: flex;
         -webkit-box-pack: center;
@@ -38,6 +38,24 @@
         span {
             color: rgb(36, 36, 36);
         }
+    }
+
+    div {
+        width: 50%;
+        display: flex;
+        -webkit-box-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        align-items: center;
+        padding-top: 5px;
+        padding-bottom: 6px;
+        flex-direction: column;
+        color: rgb(36, 36, 36);
+        font-size: 10px;
+        text-decoration: none;
+        position: relative;
+        z-index: 1;
+        font-size: 18px;
     }
 
     .active {
@@ -87,6 +105,22 @@
         -webkit-box-align: center;
         align-items: center;
         justify-content: space-between;
+
+        span {
+            display: block;
+            position: absolute;
+            z-index: 1;
+            top: 11px;
+            right: 5px;
+            width: 16px;
+            height: 16px;
+            font-size: 11px;
+            line-height: 16px;
+            background-color: #fff;
+            color: black;
+            border-radius: 50%;
+            text-align: center;
+        }
     }
     &--search {
         align-items: center;
@@ -119,6 +153,22 @@
         -webkit-box-align: center;
         align-items: center;
         justify-content: space-between;
+
+        span {
+            display: block;
+            position: absolute;
+            z-index: 1;
+            top: 19px;
+            right: 5px;
+            width: 16px;
+            height: 16px;
+            font-size: 11px;
+            line-height: 16px;
+            background-color: #fff;
+            color: black;
+            border-radius: 50%;
+            text-align: center;
+        }
     }
 
     &--cate-search {
