--- a/src/assets/scss/components/login/login.scss
+++ b/src/assets/scss/components/login/login.scss
@@ -33,6 +33,17 @@
 
             }
 
+            input.error {
+                border-color: red;
+            }
+
+            .input-feedback {
+                color: rgb(235, 54, 54);
+                font-size: 12px;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
             .continue {
                 margin-top: 20px;
                 padding: 15px 0px;
