--- a/src/assets/scss/components/common/shopcart.scss
+++ b/src/assets/scss/components/common/shopcart.scss
@@ -501,6 +501,7 @@
             }
         }
     }
+
 }
 
 .alert-cart {
@@ -564,4 +565,318 @@
             background-color: rgb(0, 148, 12);
         }
     }    
+}
+
+
+.m_sc-header {
+    position: absolute;
+    border-bottom: 1px solid rgb(239, 239, 239);
+    z-index: 10;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    
+    .m_sc-inner-top {
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        padding: 0px 16px;
+        height: 56px;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+        background-color: #222232;
+        
+        .left-header {
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+
+            img {
+                padding: 6px;
+                border-radius: 20px;
+                width: 32px;
+                height: 32px;
+                background: rgba(36, 36, 36, 0.5);
+            }
+        }
+        
+        .title-header {
+            color: rgb(255, 255, 255);
+            font-size: 17px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex: 1 1 0%;
+            text-align: center;
+            padding-right: 20px;
+        }
+    }
+}
+
+.sc_mobile-container {
+    margin-top: 56px;
+    height: 100vh;
+
+    .address-mobile {
+        width: 100%;
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        padding: 11px 16px;
+        margin-bottom: 8px;
+        background-color: rgb(255, 255, 255);
+
+        .left {
+            flex: 1 1 0%;   
+
+            .address {
+                font-size: 13px;
+                color: rgb(120, 120, 120);
+                margin: 0px;
+                line-height: 20px;
+            }
+
+            .info {
+                display: flex;
+
+                .phone {
+                    margin-left: 10px;
+                    border-left: 0.5px solid grey;
+                    padding-left: 10px;
+                }
+            }
+        }
+        
+    }
+
+    .cart-container {
+        position: relative;
+        background-color: #fff;
+
+        .cart-list {
+            padding: 0px 0px 1px;
+            flex-direction: column;
+            display: flex;
+
+            .cart-item-content {
+                flex-direction: row;
+                display: flex;
+                padding: 20px 10px;
+                border-bottom: 1px solid #d8d8d8;
+
+                .product-content {
+                    width: calc(100% - 100px);
+                    padding-left: 10px;
+                    position: relative;
+
+                    .product-name {
+                        display: -webkit-box;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        font-size: 13px;
+                        color: rgb(36, 36, 36);
+                        margin-bottom: 5px;
+                        line-height: 20px;
+                        overflow: hidden;
+                    }
+
+                    .product-price {
+                        span {
+                            color: rgb(255, 66, 78);
+                            display: inline-block;
+                            font-size: 15px;
+                            font-weight: 600;
+                        }
+                    }
+
+                    .product-quantity {
+                        display: inline-flex;
+                        flex-wrap: nowrap;
+                        border: 1px solid rgb(200, 200, 200);
+                        border-radius: 4px;
+                        width: 84px;
+                        margin-top: 10px;
+
+                        .qty-decrease {
+                            display: inline-block;
+                            border-right: 1px solid rgb(224, 224, 224);
+                            color: rgb(153, 153, 153);
+                            cursor: pointer;
+                            width: 24px;
+                            height: 24px;
+
+                            img {
+                                width: 23px;
+                                height: 23px;
+                                display: block;
+                            }
+                        }
+
+                        .qty-input {
+                            border: none;
+                            background: transparent;
+                            width: 32px;
+                            text-align: center;
+                            font-size: 13px;
+                            appearance: none;
+                            margin: 0px;
+                            outline: none;
+                            line-height: 24px;
+                        }
+
+                        .qty-increase {
+                            border-right: none;
+                            border-left: 1px solid rgb(224, 224, 224);
+                            display: inline-block;
+                            color: rgb(153, 153, 153);
+                            cursor: pointer;
+                            width: 24px;
+                            height: 24px;
+                        }
+                    }
+                }
+            
+                
+            }
+
+            .emptycart {
+                background-color: rgb(255, 255, 255);
+                width: 100vw;
+                height: 100vh;
+                display: flex;
+                -webkit-box-align: center;
+                align-items: center;
+                flex-direction: column;
+                padding: 20px 15px;
+
+                img {
+                    max-width: 100%;
+                }
+
+                p {
+                    font-size: 15px;
+                    color: rgb(36, 36, 36);
+                    line-height: 24px;
+                    text-align: center;
+                    margin: 25px 0px;
+                }
+
+                .continue-shopping {
+                    display: block;
+                    width: 100%;
+                    color: rgb(255, 255, 255);
+                    font-size: 15px;
+                    background: rgb(255, 66, 78);
+                    text-align: center;
+                    font-weight: 500;
+                    padding: 15px 0px;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+
+    .button-pay {
+        background-color: rgb(255, 255, 255);
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        width: 100vw;
+        height: 90px;
+        padding: 9px 16px 16px;
+        display: flex;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        align-items: center;
+        z-index: 1000;
+
+        .left {
+            .left-title {
+                color: rgb(36, 36, 36);
+                font-size: 13px;
+                line-height: 20px;
+            }
+
+            .left-total {
+                color: rgb(255, 66, 78);
+                font-size: 20px;
+                line-height: 28px;
+                display: flex;
+                font-weight: 600;
+            }
+        }
+
+        .right {
+            .right-button {
+                color: rgb(255, 255, 255);
+                background-color: rgb(255, 66, 78);
+                border-radius: 4px;
+                width: 136px;
+                height: 44px;
+                display: flex;
+                -webkit-box-align: center;
+                align-items: center;
+                -webkit-box-pack: center;
+                justify-content: center;
+            }
+        }
+    }
+}
+
+.alert-shopcart-mob {
+    position: fixed;
+    inset: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3000;
+
+    .alert-container {
+        position: absolute;
+        inset: 50% 40px auto 50%;
+        border: 1px solid rgb(204, 204, 204);
+        background: rgb(255, 255, 255);
+        overflow: auto;
+        border-radius: 16px;
+        outline: none;
+        padding: 0px;
+        width: 270px;
+        transform: translate(-50%, -50%);
+
+        .alert-content {
+            padding: 20px 16px;
+            color: rgb(0, 0, 0);
+            border-bottom: 1px solid rgb(242, 242, 242);
+
+            .alert-content-message {
+                display: block;
+                font-size: 17px;
+                line-height: 24px;
+                font-weight: 500;
+                text-align: center;
+            }
+        }
+
+        .alert-control {
+            display: flex;
+            text-align: center;
+            color: rgb(0, 122, 255);
+            font-size: 17px;
+            line-height: 24px;
+            padding: 0px 16px;
+
+            .control-left {
+                flex: 1 1 0%;
+                padding: 10px 0px;
+            }
+
+            .control-right {
+                flex: 1 1 0%;
+                padding: 10px 0px;
+                border-left: 1px solid rgb(242, 242, 242);
+                font-weight: 500;
+            }
+        }
+    }
 }
