--- a/src/assets/scss/pages/account/include/mobile/accountsetting.scss
+++ b/src/assets/scss/pages/account/include/mobile/accountsetting.scss
@@ -1,10 +1,10 @@
 .header-as-title {
     position: fixed;
-    z-index: 10;
+    z-index: 3000;
     top: 0px;
     left: 0px;
     right: 0px;
-    background-color: rgb(27, 168, 255);
+    background-color: black;
     display: flex;
     -webkit-box-align: center;
     align-items: center;
@@ -48,10 +48,27 @@
         -webkit-box-pack: center;
         justify-content: center;
     }
+
+    span {
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 1px;
+        right: 0px;
+        width: 16px;
+        height: 16px;
+        font-size: 11px;
+        line-height: 16px;
+        background-color: #fff;
+        color: black;
+        border-radius: 50%;
+        text-align: center;
+    }
 }
 
 .main-as {
     margin-top: 56px;
+    height: 100vh;
 
     .group {
         margin: 0px 0px 8px;
