--- a/src/assets/scss/pages/account/include/ordermanagement.scss
+++ b/src/assets/scss/pages/account/include/ordermanagement.scss
@@ -132,6 +132,10 @@
                 .number {
                     margin-top: 70px;
                     color: rgb(128, 128, 137);
+
+                    @media (max-width: 1024px) {
+                        margin-top: 5px
+                    }
                 }
             }
             
@@ -257,4 +261,35 @@
             background-color: rgb(0, 148, 12);
         }
     }    
+}
+
+@media (max-width: 1024px) {
+    .order-tablist {
+        margin-top: 56px;
+        width: 100%;
+
+        .order-tab {
+            width: 100%;
+            padding: 12px 0px;
+            text-align: center;
+            color: rgb(128, 128, 137);
+            border-bottom: none;
+        }
+    
+        .order-tab-active{
+            width: 100%;
+            padding: 12px 0px;
+            text-align: center;
+            color: rgb(13, 92, 182);
+            border-bottom: 2px solid rgb(13, 92, 182);
+        }
+
+    }
+}
+
+.m_list-product-price {
+    color: rgb(255, 66, 78);
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 600;
 }
