--- a/src/assets/scss/pages/home/include/product.scss
+++ b/src/assets/scss/pages/home/include/product.scss
@@ -14,7 +14,17 @@
         top: 1px;
         z-index: 998;
 
+        .inner {
+            margin-left: -7px;
+            margin-right: -7px;
+        }
 
+        @media (max-width: 1024px) {
+            .inner {
+                margin-left: -8px;
+                margin-right: -8px;
+            }
+        }
 
         // css icon
         .group {
@@ -151,6 +161,8 @@
             position: relative;
             grid-template-columns: repeat(8, 1fr);
             column-gap: 4px;
+            margin-left: -7px;
+            margin-right: -7px;
 
             .tab {
                 border: 1px solid white;
@@ -342,10 +354,13 @@
             @media (max-width: 1024px) {
                 .content {
                     margin: 0;
+                    width: auto;
 
                     .dashboard-product--item {
                         width: 30%;
                         margin-left: 12px;
+                        padding-left: 10px;
+                        padding-top: 10px;
                     }
                 }
             }
@@ -392,7 +407,6 @@
                 -webkit-box-pack: justify;
                 width: 100%;
                 height: 100%;
-                margin: 5px;
 
                 .thumbnail {
                     flex-shrink: 0;
