--- a/src/assets/scss/pages/productdetail/include/comment.scss
+++ b/src/assets/scss/pages/productdetail/include/comment.scss
@@ -550,6 +550,23 @@
             }
         }
     }
+
+    @media (max-width:1024px) {
+        .rate-form {
+            width: 100%;
+            height: auto;
+
+            .rate-form-header {
+                padding: 0;
+                text-align: center;
+                font-size: 20px;
+            }
+
+            .rate-form-content {
+                padding: 0 20px;
+            }
+        }
+    }
 }
 
 .alert-cart {
