--- a/src/assets/scss/pages/productdetail/include/mobile/m_detail_header.scss
+++ b/src/assets/scss/pages/productdetail/include/mobile/m_detail_header.scss
@@ -5,13 +5,14 @@
     top: 0px;
     left: 0px;
     right: 0px;
+    z-index: 20000;
     
     .m_d-inner-top {
         display: flex;
         -webkit-box-align: center;
         align-items: center;
         padding: 0px 16px;
-        height: 48px;
+        height: 56px;
         -webkit-box-pack: justify;
         justify-content: space-between;
         background-color: #222232;
@@ -30,6 +31,17 @@
             }
         }
         
+        .title-header {
+            color: rgb(255, 255, 255);
+            font-size: 17px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex: 1 1 0%;
+            text-align: center;
+            padding-right: 20px;
+        }
+
         .right-header {
             display: flex;
             -webkit-box-align: center;
