--- a/src/assets/scss/pages/productdetail/product.scss
+++ b/src/assets/scss/pages/productdetail/product.scss
@@ -18,7 +18,7 @@
 }
 
 .product-img {
-    padding: 16px 0px 16px 16px;
+    padding: 16px;
     position: relative;
 }
 
@@ -143,7 +143,7 @@
             word-break: break-word;
             
         @media (max-width: 1024px) {
-            font-size: 16px;
+            font-size: 20px;
             line-height: 24px;
             overflow: hidden;
             display: -webkit-box;
