--- a/src/assets/scss/products/productSummary.scss
+++ b/src/assets/scss/products/productSummary.scss
@@ -196,3 +196,39 @@
 .swiper-slide {
     display: flex;
 }
+.review-user-content {
+    width: 70%;
+}
+.lists-comment  {
+    ul {
+        li {
+            list-style: none;
+            p {
+                background-color: rgb(250, 250, 250);
+                border: 1px solid rgb(242, 242, 242);
+                padding: 10px 12px;
+                display: flex;
+                span {
+                    &:first-child {
+                        width: 35px;
+                        height: 35px;
+                        background: #ddd;
+                        margin-right: 7px;
+                        text-align: center;
+                        color: #666;
+                        text-transform: uppercase;
+                        font-size: 12px;
+                        line-height: 35px;
+                        border-radius: 50%;
+                        font-weight: 600;
+                        text-shadow: 1px 1px 0 rgb(255 255 255 / 20%);
+                    }
+                }
+                b {
+                    color: rgb(128, 128, 137);
+                    font-size: 13px;
+                }
+            }
+        }
+    }
+}
